Updates to first journal entry

--- a/0001-2019-11-28.md
+++ b/0001-2019-11-28.md
@@ -4,21 +4,21 @@ I spent the last 3 nights trying out a [Digispark](http://digistump.com/products
 
 ![Digispark rev3](i/0001-digispark.jpg)
 
-_NOTE: The board pictured is the same as mine and is apparently [a cheap Chinese clone](https://www.ebay.com.au/itm/Digispark-Kickstarter-Micro-General-USB-Development-Board-ATTINY85-Arduino/263984778611?epid=4011253984&hash=item3d76b80d73:g:OTgAAOSw2YZbvucc&frcectupt=true) identified by the fact that there is [no official rev3 version](https://digistump.com/wiki/digispark/tutorials/modelbi2c)._
+_NOTE: The board pictured is the same as mine and is apparently [a cheap Chinese clone](https://www.ebay.com.au/itm/Digispark-Kickstarter-Micro-General-USB-Development-Board-ATTINY85-Arduino/263984778611?epid=4011253984&hash=item3d76b80d73:g:OTgAAOSw2YZbvucc&frcectupt=true); there is [no official rev3 version](https://digistump.com/wiki/digispark/tutorials/modelbi2c)._
 
 [An article I saw was a little critical of it](https://blog.mousetech.com/why-im-not-using-digisparks-attiny85-in-almost-everything/), basically saying its dev method differs too much from normal Arduino stuff and it is poorly supported by [Digistump](http://digistump.com/), without recent OS support. There was an [update to that article](https://blog.mousetech.com/digispark-attiny85-revisited/), though, which discussed better results.
 
 I've never actually used an Arduino before and hardly used the Arduino IDE, but I didn't have too much trouble. I followed their [setup Wiki](https://digistump.com/wiki/digispark/tutorials/connecting) on Windows 10:
 
 1.  I already had Arduino IDE 1.8.5 installed from my STM32 experiments. I haven't upgraded it.
-2.  [Downloaded the Digistump Drivers](https://github.com/digistump/DigistumpArduino/releases/download/1.6.7/Digistump.Drivers.zip), extracted them, and ran `DPInst64` (for my 64-bit platform). They seemed to go in fine. This is apparently necessary for Arduino 1.6.6+ and maybe also for Windows 8/10.
+2.  [Downloaded the Digistump Drivers](https://github.com/digistump/DigistumpArduino/releases/download/1.6.7/Digistump.Drivers.zip), extracted them, and ran `DPInst64.exe` (for my 64-bit platform). They seemed to go in fine. This is apparently necessary for Arduino 1.6.6+ and maybe also for Windows 8/10.
 3.  Launched the Arduino IDE and went to `File` => `Preferences` and added the "Additional Boards Manager URL": `http://digistump.com/package_digistump_index.json`
-4.  Went to `Tools` => `Board` => `Boards Manager`, selected `Type: Contributed`, and search for `digistump`. 
+4.  Went to `Tools` => `Board` => `Boards Manager`, selected `Type: Contributed`, and searched for `digistump`. 
 5.  "Digistump AVR Boards" is the first result that comes up. Clicking on this reveals the "Install" button.
 6.  It doesn't take long after clicking "Install", but it might come up with an error about drivers. Fortunately, I think I've found this can be ignored (because of step 2 above).
 7.  Went to `Tools` => `Board` => `Digispark (Default - 16.5mhz)`
 
-NOTE: I also first tried this on my MS Surface 1 tablet running Windows 8.1. It didn't seem to work (namely, it couldn't run the toolchain executables), but I think I've sinced worked out this was because my `%PATHEXT%` system environment variable was damaged; easily fixed, but I haven't since tried running the Arduino IDE on that tablet.
+NOTE: I also first tried this on my MS Surface 1 tablet running Windows 8.1. It didn't seem to work (namely, it couldn't run the toolchain executables, especially reporting that `micronucleus` "is not recognized as an internal or external command, operable program or batch file"). I think I've worked out this was because my `%PATHEXT%` system environment variable was damaged; easily fixed, but I haven't since tried running the Arduino IDE on that tablet.
 
 With the environment now ready, I tried a test program:
 
@@ -60,6 +60,31 @@ With the environment now ready, I tried a test program:
     ```
 
 Shortly after this, the LED started blinking at 0.5Hz.
+
+I borrowed a simple PWM example, noting that the LED is on Pin 1:
+
+```cpp
+#define LED_PIN 1
+#define DELAY 5
+
+// the setup routine runs once when you press reset:
+void setup() {                
+  // initialize the digital pin as an output.
+  pinMode(LED_PIN, OUTPUT);
+}
+
+// the loop routine runs over and over again forever:
+void loop() {
+  for (int i=0; i<=255; ++i) {
+    analogWrite(LED_PIN, i);
+    delay(DELAY);
+  }
+  for (int i=255; i>=0; --i) {
+    analogWrite(LED_PIN, i);
+    delay(DELAY);
+  }
+}
+```
 
 I then tried a virtual USB Keyboard example, via `File` => `Examples` => `DigisparkKeyboard` => `Keyboard`:
 
@@ -138,43 +163,67 @@ This does the following, with brief pauses (1 second or less) at key spots to en
 4.  Goes into a loop where, each second, it will:
     1.  Toggle <kbd>Caps Lock</kbd>.
     2.  Hit <kbd>TAB</kbd>.
-    3.  Hit <kbd>F5</kbd> (which inserts the current date and time, in Notepad).
+    3.  Hit <kbd>F5</kbd> (which is just a Notepad command to insert the current date and time).
     4.  Types `Hello again. Shoot is: ` followed by the number of an incrementing counter.
     5.  _Either_ (based on the incrementing counter, which stops at 2), will do <kbd>WIN</kbd>+<kbd>Print Screen</kbd> or <kbd>ALT</kbd>+<kbd>Print Screen</kbd>, or do nothing.
 
-The rest of these notes are pretty loose, and need tidying up.
+Here are some other things I think I've learned about this device and V-USB:
 
-Later I might also try the [Digispark Pro](http://digistump.com/category/19). I wouldn't pay US$10 for it, but instead I will try a [cheap Chinese knockoff](https://www.ebay.com.au/itm/1pcs-Digispark-Pro-ATTINY167-Kickstarter-Development-Board-for-Arduino/183429222521?hash=item2ab53bd079:g:gAQAAOSwmZJbmLdv&frcectupt=true) again.
-
-Is using this a good way to try out various Arduino libraries and get to know what all the fuss is about? Or is it too different/limited compared to normal Arduino models/clones?
-
-Ideas of things to try out:
-
-*   CDC (Virtual COM port via USB)
-*   USB Mouse
-*   RGB LED (using PWM)
-*   I2C stuff, including IO Expander
-*   Simple SPI stuff, inc. reading buttons/keypads or controlling LEDs/7-seg displays using serial shift registers
-*   Interfacing to other simple devices
-*   Making an actual interface adapter for USB keyboard, joystick, or whatever
-*   Learning more V-USB stuff
-*   Shifting clock speed
-*   Replacing bootloader
-
-NOTE: ATtiny85 has 512 bytes of RAM.
+*   The ATtiny85 has 8kB flash ROM and 512 bytes of RAM.
+*   At least 2kB of the flash ROM are used by the bootloader.
+*   At least some libraries used with the Digispark differ from the normal Arduino libraries, probably due to its restricted capacity/capabilities. There are some [specific documented differences between normal Arduino and Digispark](https://digistump.com/wiki/digispark/tutorials/connecting#digispark_differences_and_using_arduinoprocessing_with_the_digispark) with [more detail here](https://digistump.com/wiki/digispark/tutorials/basics).
+*   There is a [handy quick reference about the Digispark](https://digistump.com/wiki/digispark/quickref) which I think has enough other example stuff that it should be combined with other tutorials/examples.
+*   I2C can't be used with rev0 boards unless the [LED is disconnected](https://digistump.com/wiki/digispark/tutorials/modelbi2c).
+*   Arduino's [`F()`](https://forum.arduino.cc/index.php?topic=91314.0) function can be used to wrap strings and access them from flash ROM rather than having them consume RAM, but from what I'm reading this can only be used with certain function prototypes that understand the difference and hence are designed to read each byte from flash ROM directly, rather than just treating them like a normal pointer.
+*   The USB HID Keyboard protocol supposedly only supports up to 6 simulatenous keys (besides, I think, 8 modifier keys like left CTRL, right CTRL, etc).
+    *   There is some discussion about this [here](https://www.microchip.com/forums/m368006.aspx).
+    *   There is also the old [`HID1_11.pdf` USB HID Device Class Definition, Appendix C](https://www.usb.org/sites/default/files/documents/hid1_11.pdf#page=72) with more information on this.
+    *   The [Wikipedia USB HID page](https://en.wikipedia.org/wiki/USB_human_interface_device_class) might also provide a good high-level summary.
+*   The Digispark's `DigiKeyboard` library can be used for basic USB keyboard emulation but is lacking some features, as far as I can tell:
+    *   Can't set or receive keyboard LED status information.
+    *   Can't specifically control which keys are up and down at any given time, and instead works by sending a single key (plus optional modifier keys) down-and-up sequence. In other words, only 1 of the 6 available "key slots" is supported.
+*   `DigiKeyboard` needs to be given time to perform USB updates in order to stay connected to the host. This must happen at least every 50ms. For this purpose, there is `DigiKeyboard.update()` but also `DigiKeyboard.delay()` to implement a delay loop that does this refresh automatically.
+*   The code for `DigiKeyboard` is found [here](https://github.com/digistump/DigisparkArduinoIntegration/blob/master/libraries/DigisparkKeyboard/DigiKeyboard.h) so maybe we can figure out how to extend it to support some of its missing features, or otherwise replace it. Understanding V-USB might help us understand this better.
+*   This is apparently a way to set a random seed with Arduino: `randomSeed(analogRead(0));`
+*   There are some interesting [Digispark-specific features/tricks](https://digistump.com/wiki/digispark/tricks), including:
+    *   Detecting if clock calibration occurred (possibly to detect whether USB is connected or not?)
+    *   Underclocking the CPU to save power.
+    *   Jumping to the bootloader.
+    *   Removing the bootloader's 5-second startup delay.
+    *   3 (usable) hardware PWM pins, or only 2 if using USB simultaneously too, plus additional software PWM.
+*   Arduino's `analogWrite()` typically means doing PWM (8-bit resolution) on a digital pin.
+*   The [Digistump website](http://digistump.com/) shows lots of "shields" that would good give ideas for other projects that can be done in this minimal form factor.
+*   The [`Echo` DigiUSB example](https://github.com/digistump/DigisparkArduinoIntegration/blob/master/libraries/DigisparkUSB/examples/Echo/Echo.ino) shows some basic part of initialising the `DigiUSB` library and doing basic USB read/write. I'm not sure what driver requirements there are: [Someone seems to think it's a HID device](https://digistump.com/board/index.php?topic=91.0) but I'm not sure if it's true.
+*   There is also [DigiBlink](https://github.com/digistump/DigisparkArduinoIntegration/blob/master/libraries/DigisparkUSB/examples/DigiBlink/DigiBlink.ino) which appears to change the USB device name, too (handled just inside `DigiUSB.h`?)
+*   There is the [`digiusb`](https://rubygems.org/gems/digiusb) Ruby Gem for communicating specifically with DigiUSB devices ([code and example here](https://github.com/Bluebie/digiusb.rb)).
 
 Other notes:
 
-*   https://diyodemag.com/projects/usb_rubber_ducky
-*   https://digistump.com/wiki/digispark/tutorials/connecting#digispark_differences_and_using_arduinoprocessing_with_the_digispark vs. http://digistump.com/wiki/digispark/tutorials/basics
-*   https://digistump.com/wiki/digispark/tricks
-*   I2C is compromised by the LED on "Model B" boards??
-*   https://digistump.com/wiki/digispark/quickref
-*   http://digistump.com/ - for various "shields" and hence maybe ideas?
-*   https://forum.arduino.cc/index.php?topic=119740.15
-*   https://www.pjrc.com/teensy/td_keyboard.html -- includes info about how USB sends the keyboard state.
-*   http://www.quadibloc.com/comp/scan.htm
-*   https://github.com/digistump/DigisparkArduinoIntegration/blob/master/libraries/DigisparkKeyboard/DigiKeyboard.h
-*   https://www.instructables.com/id/Controlling-LEDs-over-USB-with-VUSB/
-*   https://codeandlife.com/2012/06/18/usb-hid-keyboard-with-v-usb/
-*   https://github.com/obdev/v-usb/blob/master/examples/custom-class/commandline/set-led.c
+*   The PJRC/Teensy website [has info on Arduino USB projects](https://www.pjrc.com/teensy/td_keyboard.html) and gives more insight into how USB keyboards work including the "6 key slots" thing (see "The Micro Manager Way" heading). It also includes this important statement re scan codes in USB:
+
+    > If you are familiar with the older PS/2 keyboard "scan codes", please be aware that USB keyboard codes work differently (and use different numerical values). The old scan codes sent different messages for key down and key up events, where each message represented a single key's change. With USB, each message represents the complete state of the keyboard. Up to any 6 keys may be pressed at once, plus any combination of the 8 modifier keys.
+
+*   The [V-USB repo](https://github.com/obdev/v-usb) has some [examples of host-side code](https://github.com/obdev/v-usb/blob/master/examples/custom-class/commandline/set-led.c) which might also be useful/interesting for experimenting with USB control. Not sure how this would play with device drivers trying to take over.
+*   V-USB has heaps of [example projects](https://www.obdev.at/products/vusb/projects.html) including hardware.
+*   There is also [an example](https://github.com/obdev/v-usb/tree/master/examples/hid-data) that shows basic HID reading/writing, which means data transfer can be done without any special drivers needed on the host...?
+*   [USBtiny](https://dicks.home.xs4all.nl/avr/usbtiny/) is apparently similar to V-USB, and well-explained, but more-limited.
+*   There is some stuff [here](https://forum.arduino.cc/index.php?topic=119740.15) about common Ardunio USB HID key scan code convention stuff.
+*   The page, [Scan Codes Demystified](http://www.quadibloc.com/comp/scan.htm) has heaps of information on various keyboard scan codes, and includes columns specifically for USB key definitions (e.g. it shows `PrtSc` is `46` (0x46), `Mute` is `7F`, and there is no distinct key for `Sleep`?)
+*   More details [here](https://codeandlife.com/2012/06/18/usb-hid-keyboard-with-v-usb/) on V-USB and HID keyboards. Looks pretty good, and includes info on receiving LED state changes.
+*   Another practical example of custom USB devices with V-USB, [here](https://www.instructables.com/id/Controlling-LEDs-over-USB-with-VUSB/).
+
+Other thoughts:
+
+*   Later I might also try the [Digispark Pro](http://digistump.com/category/19). I wouldn't pay US$10 for it, but instead I will try a [cheap Chinese knockoff](https://www.ebay.com.au/itm/1pcs-Digispark-Pro-ATTINY167-Kickstarter-Development-Board-for-Arduino/183429222521?hash=item2ab53bd079:g:gAQAAOSwmZJbmLdv&frcectupt=true) again.
+*   Is using this a good way to try out various Arduino libraries and get to know what all the fuss is about? Or is it too different/limited compared to normal Arduino models/clones?
+*   Some project ideas and other things to try learning:
+    *   CDC (Virtual COM port via USB)
+    *   USB Mouse
+    *   RGB LED (using PWM)
+    *   I2C stuff, including IO Expander
+    *   Simple SPI stuff, inc. reading buttons/keypads or controlling LEDs/7-seg displays using serial shift registers
+    *   Interfacing to other simple devices
+    *   Making an actual interface adapter for USB keyboard, joystick, or whatever -- NES controller should be easy, since it uses a serial shift register.
+    *   Learning more V-USB stuff
+    *   Shifting clock speed
+    *   Replacing bootloader
