--- a/0002-2019-12-02.md
+++ b/0002-2019-12-02.md
@@ -24,6 +24,7 @@
     Sketch uses 712 bytes (11%) of program storage space. Maximum is 6012 bytes.
     Global variables use 9 bytes of dynamic memory.
     ```
+*   Note to read about `millis()`: https://forum.arduino.cc/index.php?topic=503368.0
 
 
 [01-blinky]: code/0002-digispark/01-blinky/
