Updates to 0002 and its blinky examples

--- a/0002-2019-12-02.md
+++ b/0002-2019-12-02.md
@@ -24,7 +24,27 @@
     Sketch uses 712 bytes (11%) of program storage space. Maximum is 6012 bytes.
     Global variables use 9 bytes of dynamic memory.
     ```
+
+    NOTE: On my Windows 8.1 machine, running the older `avr-gcc` (Digispark's default) makes a program that uses 700 bytes instead of 712.
+*   I went to program it on my Windows 8.1 MS Surface 1 machine. "Upload" button in Arduino IDE got to the waiting-for-plugin stage. When I plugged in the Digispark, though, it took about 10 seconds before Windows seemed to wake up and recognise it as a USB device. It should've been recognised pretty quickly, but instead the "device plugged in" sound was delayed by quite a bit, and then a window popped up in the background, probably saying that Windows was checking for device drivers, etc. Hence, it wasn't properly detected by `micronucleus`. The next time I plugged it in, it seemed to work fine, though, and was programmed. Sometimes, though, it just doesn't work, giving a "USB device not recognized" error (after the bootloader's 5-second timeout).
+*   In [02-blinky2] I tried toggling the LED pin with:
+    ```cpp
+    digitalWrite(LED, ~digitalRead(LED));
+    ```
+    ...i.e. writing the complement of a read from the LED pin, back to that LED pin. This doesn't work though, I think because `digitalRead()` and `digitalWrite()` work on simple boolean values, where a read might return `0b00000001` and its complement is `0b11111110`, hence getting permanently stuck on. The solution is to do this instead:
+    ```cpp
+    digitalWrite(LED, !digitalRead(LED));
+    ```
+*   [C++ operator precedence](https://en.cppreference.com/w/cpp/language/operator_precedence) says that multiplication, division, and remainder should be equivalent, and just work in left-to-right order, but I was finding possible differences in how these two lines would compile (from [05-blinky5]):
+    ```cpp
+    unsigned long slot = ((millis()-start)/(PERIOD/SLOTS)) % SLOTS;
+    unsigned long slot = ((millis()-start)/PERIOD*SLOTS) % SLOTS;
+    ```
+    They should be equivalent (given removal of parentheses around `PERIOD/SLOTS`), but only the first line works. With the second line it just looks like the LED is on all the time. Maybe the problem is actually to do with integer overflows or something, or because there is no pre-calculation on the part of the compiler, meaning that precision is being lost first in
+    `/PERIOD` and not regained in `*SLOTS`.
 *   Note to read about `millis()`: https://forum.arduino.cc/index.php?topic=503368.0
 
 
 [01-blinky]: code/0002-digispark/01-blinky/
+[02-blinky2]: code/0002-digispark/02-blinky2/
+[05-blinky5]: code/0002-digispark/05-blinky5/
