--- a/0003-2019-12-03.md
+++ b/0003-2019-12-03.md
@@ -24,7 +24,7 @@ More Digispark stuff:
     Global variables use 83 bytes of dynamic memory.
     ```
 *   Micronucleus doing an upload to Digispark seems to be finicky on macOS: With my Mac, it was faulty when plugged into the keyboard's own USB socket. When plugged into the back of the Mac, it sometimes took too long to be recognised. It still worked after a couple of tries, though. I've noticed that both Mac and Windows _look like_ they recognise the device faster if it gets plugged into a USB port that it has previously been used on.
-*   For some reason, `KB.sendKeyStroke(KEY_CAPSLOCK);` seems to have no effect on my Mac. Maybe the Mac cares more about status LEDs?
+*   For some reason, `KB.sendKeyStroke(KEY_CAPSLOCK);` seems to have no effect on my Mac. Maybe the Mac cares more about status LEDs? Actually, it might have something to do with how `KB.print` works: It already specifies case in the string. I can't quite tell, then, why Windows behaves differently.
 *   Lots of USB key scan codes can be found here: https://gist.github.com/MightyPork/6da26e382a7ad91b5496ee55fdc73db2
 *   [02-kb2] is meant to open Spotlight Search (<kbd>CMD</kbd>+<kbd>Space</kbd>) and do some stuff on a Mac. In order to make that initial key combo work (`KB.sendKeyStroke(KEY_SPACE, MOD_GUI_LEFT);`) I had to add this before it:
     ```cpp
@@ -32,6 +32,79 @@ More Digispark stuff:
     KB.delay(100);
     KB.sendKeyStroke(0);
     KB.delay(100);
+    ```
+*   Other keyboard scancode stuff here: https://deskthority.net/wiki/Scancode -- and the [Wiki itself](https://deskthority.net/wiki/Main_Page) might be interesting to learn more about HID.
+*   Is it possible to do `KB.sendKeyStroke(0xe3)` to "tap" the Windows key and hence bring up the Windows menu, even though this key is normally a modifier?
+*   Someone's example code for a "shortcut" keyboard adapter, including reading from a shift register:
+
+    ```cpp
+    #include "DigiKeyboard.h"
+
+    int dataPin = 0;   // Pin 0 of DigiSpark connected to Pin 3 of CD4021
+    int clockPin = 1;  // Pin 1 of DigiSpark connected to Pin 10 of CD4021
+    int latchPin = 2;  // Pin 2 of DigiSpark connected to Pin 9 of CD4021
+    
+
+    byte RegisterValue = 0; 
+
+    void setup() {
+
+    //define pins used to connect to the CD4021 Shift Register
+    pinMode(dataPin, INPUT);
+    pinMode(latchPin, OUTPUT);
+    pinMode(clockPin, OUTPUT); 
+
+    }
+
+    void loop() {
+
+    //Set latch pin to 1 to get recent data into the CD4021
+    digitalWrite(latchPin,1);
+    
+    delayMicroseconds(20);
+    
+    //Set latch pin to 0 to get data from the CD4021
+    digitalWrite(latchPin,0);
+
+    //Get CD4021 register data in byte variable
+    RegisterValue = shiftIn(dataPin, clockPin, MSBFIRST);
+
+
+    if (RegisterValue == B1000000) {
+    DigiKeyboard.sendKeyStroke(KEY_C, MOD_CONTROL_LEFT ); //COPY SHORTCUT (ctrl+c)
+
+    }
+
+    if (RegisterValue == B1000) {
+    DigiKeyboard.sendKeyStroke(KEY_V, MOD_CONTROL_LEFT ); //PASTE SHORTCUT (ctrl+v)
+
+    }
+
+    if (RegisterValue == B100) {
+    DigiKeyboard.sendKeyStroke(KEY_X, MOD_CONTROL_LEFT ); //CUT key SHORTCUT (ctrl+X)
+    
+    }
+
+    if (RegisterValue == B10) {
+    DigiKeyboard.sendKeyStroke(KEY_F4,MOD_ALT_LEFT ); // Close shortcut key(alt+ F4)
+    DigiKeyboard.delay(250);
+    }
+
+    if (RegisterValue == B10000) {
+    DigiKeyboard.sendKeyStroke(KEY_D,MOD_GUI_LEFT); //  (WINDOWS+D)
+    DigiKeyboard.delay(250);
+    
+    }
+    
+    if (RegisterValue == B10000000) {
+        DigiKeyboard.print("Hello"); // TO PRINT SOMETHING WITH A KEY PRESS
+        DigiKeyboard.delay(250);
+    
+    }
+
+    delay(250);
+
+    }
     ```
 
 [00a-empty]: 0003-digispark-hid/00a-empty
